# SynKit

./: .buildinfo  .gitignore  .readthedocs.yml  CHANGELOG.md  Dockerfile  README.md  api.html  build_doc.sh  changelog.html  chem.html  environment.yml  genindex.html  getting_started.html  graph.html  index.html  io.html  lint.sh  objects.inv  plan.html  py-modindex.html  pyproject.toml  reference.html  references.html  requirements.txt  rule.html  search.html  searchindex.js  synthesis.html  test_data_query.ipynb  test_query.ipynb
.doctrees/: api.doctree  changelog.doctree  chem.doctree  environment.pickle  getting_started.doctree  graph.doctree  index.doctree  io.doctree  reference.doctree  references.doctree  rule.doctree  synthesis.doctree
.github/: dependabot.yml
.github/workflows/: build-doc.yml  conda-forge-publish.yml  docker-publish.yml  publish-package.yml  test-and-lint.yml  verify-pypi-install.yml
Data/Benchmark/: case_study.ipynb  experiments.ipynb  rdchiral.ipynb  run_benchmarks.sh
Data/Conformance/: stereomolgraph_graph_conformance.json
Data/KEGG/: M00001_abstract.json  M00001_imputed.json  M00001_raw.json  hsa00010_abstract.json  hsa00010_imputed.json  hsa00010_raw.json  hsa00010_raw_new.json
Data/Mech/: README.md  polar.json  radical.json  stereo.json
Data/MechanismBench/: README.md  non_tetrahedral_rewrite_conformance.json  stereo.json
Data/Schema/: attribute_propagation_v1_5.json
LICENSES/: ACS-StereoMolGraph-SI-NOTICE.md  StereoMolGraph-MIT.txt
Test/: test_python_file_size.py  test_version.py
Test/Graph/: test_canon_graph.py  test_graph_hydrogen.py  test_utils.py
Test/IO/: test_chemical_converter.py  test_dfs_smiles.py  (+4 more)
debug/: analyze_polar_json.py  check_lwg_polar_json.py  format_json.py  generate_arrow_dataset_batch.py  process_data.py  visualize_polar_json.py
doc/: api.rst  changelog.rst  chem.rst  conf.py  crn.rst  getting_started.rst  graph.rst  index.rst  io.rst  mechanism.rst  reaction_stereo_relations.rst  reference.rst  references.rst  refs.bib  requirements.txt  rule.rst  stereo_morphisms.rst  stereo_orbits.rst  synthesis.rst  vis.rst
recipe/: meta.yaml
synkit/: version.py
tools/: check_python_file_size.py  python_file_size_baseline.json  stereo_conformance.py
(+656 files in other folders)
