[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synkit"
version = "1.6.0b1"
description = "Utility for reaction modeling using graph grammar"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE", "LICENSES/*"]
authors = [
  { name = "Tieu Long Phan", email = "tieu@bioinf.uni-leipzig.de" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "scikit-learn>=1.4.0",
  "pandas>=1.5.3",
  "rdkit>=2025.3.1",
  "networkx>=3.3",
  "scipy>=1.14.0",
  "seaborn>=0.13.2",
  "requests>=2.32.3",
  "regex>=2024.11.6",
]

[project.optional-dependencies]
all = ["numpy>=2.2.0", "torch>=2.2.0", "sympy>=1.13.1"]
docs = [
  # Core Sphinx
  "sphinx>=6.0",

  # Theme (primary) + fallback
  "pydata-sphinx-theme",
  "sphinx-rtd-theme",

  # Your enabled extensions
  "sphinxcontrib-bibtex",
  "sphinx-design",
  "sphinx-copybutton",
  "sphinx-togglebutton",

  # Graphviz extension uses the `graphviz` Python package
  # (still requires the system `dot` binary to render diagrams)
  "graphviz",

  # Nice-to-have for markdown in docs if you ever add .md pages
  # (safe even if unused)
  "myst-parser",
]


[project.urls]
homepage      = "https://github.com/TieuLongPhan/SynKit"
source        = "https://github.com/TieuLongPhan/SynKit"
issues        = "https://github.com/TieuLongPhan/SynKit/issues"
documentation = "https://tieulongphan.github.io/SynKit/"

[tool.hatch.build.targets.wheel]
packages = ["synkit"]

[tool.hatch.build.targets.wheel.force-include]
"synkit/Data/aldol.json.gz" = "synkit/Data/aldol.json.gz"
"synkit/Data/paracetamol.json.gz" = "synkit/Data/paracetamol.json.gz"
"Data/Mech" = "synkit/Data/Mech"

[tool.hatch.build.targets.sdist]
include = [
  "/synkit",
  "/Data/Mech",
  "/LICENSE",
  "/LICENSES",
  "/README.md",
  "/pyproject.toml",
]

[tool.hatch.build.targets.sdist.force-include]
"synkit/Data/aldol.json.gz" = "synkit/Data/aldol.json.gz"
"synkit/Data/paracetamol.json.gz" = "synkit/Data/paracetamol.json.gz"
"Data/Mech" = "Data/Mech"
